# StudyNotesManager

./: .dockerignore  .gitignore  GIT_WORKFLOW.md  QUICK_START.md  README.md  TEAMMATES_GUIDELINES.md  TEST_SUMMARY.md  clean_json.py  docker-compose.yml  extract_arch.py  git-setup.sh  start-docker.sh  当前状态.md  最终状态报告.md  系统架构设计文档.md  记录学习过程项目.md  详细任务清单.md  进度报告.md  项目完成报告.md
backend/: .env.example  .gitignore  ANALYTICS_TECH_DEBT.md  API_TESTS_COMPLETE.md  AUTH_API_COMPLETE.md  AUTH_API_VERIFICATION.md  AUTH_API_VERIFICATION_TASK21.md  AUTH_COMPLETION_REPORT.md  BACKEND_DEV_FINAL_SUMMARY.md  DATABASE_SCHEMA_SUMMARY.md  Dockerfile  MIGRATION_CHECKLIST.md  MINDMAP_FEATURE_SUMMARY.md  MINDMAP_IMPLEMENTATION_SUMMARY.md  Makefile  NOTE_UPLOAD_IMPLEMENTATION_REPORT.md  QUIZ_FEATURE_SUMMARY.md  README.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  TEST_RESULTS_TASK20.md  VERIFICATION_REPORT.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_basic.py  test_config.py  verify_implementation.py  verify_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_note_tags_and_favorite.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  dependencies.py  health.py  mindmaps.py  mistakes.py  notes.py  quizzes.py  stats.py
backend/scripts/: db_manage.py
backend/tests/: README.md  TEST_QUALITY_IMPROVEMENT_PLAN.md  TEST_SECURITY_ISSUES.txt  conftest.py  helpers.py  test_boundary.py  test_error_scenarios.py  test_main.py  test_performance.py  utils.py
docs/: README.md
(+152 files in other folders)
